--- a/appsettings.json
+++ b/appsettings.json
@@ -1,25 +1,6 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=GameDatabase;Trusted_Connection=True;"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning"
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Critical"
-      }
-    },
-    "File": {
-      "LogLevel": {
-        "Default": "Trace"
-      },
-      "Append": true,
-      "FileSizeLimitBytes": 10485760,
-      "MaxRollingFiles": 5,
-      "MinLevel": "Trace"
-    }
+  "ConnectionStrings": 
+  {
+  "DefaultConnection": "Server=bitsql.wctc.edu; Database=EFCoreIntro_SilasStowe; User Id=mstowe3; Password=000557664;"
   }
 }
